Fri Mar 25 18:33:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tao/*:
          Regenerated files that didn't cause problems on my system.

        * tao/PortableServer/Upcall_Wrapper.cpp:
          Added missing include

        * tao/TypeCodeFactory_Adapter.h:
          Added include of Typecode_types.h

Fri Mar 25 11:58:40 2005  Chad Elliott  <elliott_c@ociweb.com>

        * orbsvcs/tests/Notify/performance-tests/Filter/Notify_Sequence_Push_Consumer.cpp:
        * orbsvcs/tests/Notify/performance-tests/Filter/Sequence_Consumer.cpp:

          Committing Paul Calabrese's change from TAO 1.4a.

          Alter this test to properly count the events received in the
          consumer (instead of counting batches).

Fri Mar 25 12:35:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tao/Pollable.pidl:
          Renamed PollableSet::poll to get_ready_pollable to be compliant with
          the latest corba spec. We will regenerate the files in the repo later
          today

Fri Mar 25 11:42:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tao/Services.pidl:
          Made the ServiceDetail struct compliant with the latest spec by
          adding a new typedef and using this in the struct definition. We
          will regenerate the corresponding files later today

Fri Mar 25 07:09:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tao/ImR_Client/ImR_Client.cpp:
          Fixed typo in shutdown message. Thanks to Thomas Lockhart
          <Thomas dot Lockhart at jpl dot nasa dot gov> for reporting this.

Thu Mar 24 16:54:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * orbsvcs/tests/Event/Mcast/Simple/consumer.cpp:
          Emulated exception fix

Thu Mar 24 13:45:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * orbsvcs/orbsvcs/Event/Event_Channel.i:
          Updated because timer_id is a long

Thu Mar 24 12:59:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>
